--- a/index.html
+++ b/index.html
@@ -1,56 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Clearview Store</title>
-    <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Clearstore - IPTV Store</title>
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>Clearview Store</header>
-    <div class="grid">
-        <div class="card">
-            <img src="images/iptv_subscription.jpg" alt="IPTV Subscription" />
-            <h3>IPTV Subscription</h3>
-            <p>$8</p>
-            <button class="buy-button">Buy Now</button>
-        </div>
-        <div class="card">
-            <img src="images/etv.jpg" alt="Etv" />
-            <h3>Etv</h3>
-            <p>$10</p>
-            <button class="buy-button">Buy Now</button>
-        </div>
-        <div class="card">
-            <img src="images/startimes_vip.jpg" alt="StarTimesOn VIP" />
-            <h3>StarTimesOn VIP</h3>
-            <p>$6</p>
-            <button class="buy-button">Buy Now</button>
-        </div>
-        <div class="card">
-            <img src="images/glassico_skyglass.jpg" alt="Glassico/Sky Glass" />
-            <h3>Glassico/Sky Glass</h3>
-            <p>$8</p>
-            <button class="buy-button">Buy Now</button>
-        </div>
-        <div class="card">
-            <img src="images/sport_tv.jpg" alt="Sport TV" />
-            <h3>Sport TV</h3>
-            <p>$6</p>
-            <button class="buy-button">Buy Now</button>
-        </div>
-        <div class="card">
-            <img src="images/dstv_stream.jpg" alt="DSTV Stream" />
-            <h3>DSTV Stream</h3>
-            <p>$6</p>
-            <button class="buy-button">Buy Now</button>
-        </div>
-        <div class="card">
-            <img src="images/netflix.jpg" alt="Netflix" />
-            <h3>Netflix</h3>
-            <p>$9</p>
-            <button class="buy-button">Buy Now</button>
-        </div>
+  <header>
+    <h1>Clearstore IPTV Subscriptions</h1>
+  </header>
+  
+  <div class="product-grid">
+    <div class="product" onclick="toggleDescription('iptv-desc')">
+      <img src="images/iptv.jpg" alt="IPTV Subscription">
+      <h2>IPTV Subscription</h2>
+      <p id="iptv-desc" class="description">Choose your plan: 1M $6, 3M $12, 6M $24, 1Y $48. Access 13,000+ channels & VOD on Smart TVs and mobile.</p>
     </div>
+
+    <div class="product" onclick="toggleDescription('etv-desc')">
+      <img src="images/etv.jpg" alt="ETV Subscription">
+      <h2>ETV Subscription</h2>
+      <p id="etv-desc" class="description">ETV IPTV plans: 1M $6, 3M $12, 6M $24, 1Y $48. Flexible, reliable, works on your devices anytime.</p>
+    </div>
+
+    <div class="product" onclick="toggleDescription('startime-desc')">
+      <img src="images/startime.jpg" alt="Startime Subscription">
+      <h2>Startime Subscription</h2>
+      <p id="startime-desc" class="description">Watch live football & series anytime. Fast loading, interactive live broadcasts, and VIP access on Smart TVs and mobile.</p>
+    </div>
+
+    <div class="product" onclick="toggleDescription('glassico-desc')">
+      <img src="images/glassico.jpg" alt="Glassico Xtream IPTV Player">
+      <h2>Glassico Xtream IPTV Player</h2>
+      <p id="glassico-desc" class="description">Seamless Xtream IPTV player for free. Enjoy top streaming with enhanced, user-friendly experience.</p>
+    </div>
+
+    <div class="product" onclick="toggleDescription('sport-desc')">
+      <img src="images/sport.jpg" alt="Sport TV">
+      <h2>Sport TV</h2>
+      <p id="sport-desc" class="description">600+ live channels including cricket in 4K HD quality. One app to watch live sports without hassle.</p>
+    </div>
+
+    <div class="product" onclick="toggleDescription('dstv-desc')">
+      <img src="images/dstv.jpg" alt="DSTV Stream">
+      <h2>DSTV Stream</h2>
+      <p id="dstv-desc" class="description">DSTV Stream subscription valid for 1 month. Watch your favorite channels live anytime, anywhere.</p>
+    </div>
+
+    <div class="product" onclick="toggleDescription('netflix-desc')">
+      <img src="images/netflix.jpg" alt="Netflix">
+      <h2>Netflix Note</h2>
+      <p id="netflix-desc" class="description">Note: This app has no monthly subscription. Enjoy Netflix without restrictions on your devices.</p>
+    </div>
+
+  </div>
+
+<script>
+function toggleDescription(id) {
+  const desc = document.getElementById(id);
+  desc.classList.toggle('show');
+}
+</script>
+
 </body>
 </html>
