--- a/index.html
+++ b/index.html
@@ -1,88 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ClearView TV</title>
-  <meta name="description" content="Modern IPTV website with animation">
-  <link rel="stylesheet" href="style.css">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clearview IPTV Plans</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <h1>Clearview IPTV</h1>
+        </div>
+    </header>
 
-  <!-- Hero -->
-  <section class="hero" data-aos="fade-up">
-    <div class="overlay">
-      <div class="container">
-        <h1>Stream Limitlessly with ClearView TV</h1>
-        <p>Thousands of channels, movies, and series at your fingertips.</p>
-        <a href="#plans" class="btn">Start Watching</a>
-      </div>
-    </div>
-  </section>
+    <section class="plans">
+        <h2>Our Plans</h2>
+        <div class="plan-cards">
+            <div class="plan-card">
+                <h3>GOOD</h3>
+                <div class="ram">1 GB</div>
+                <p class="price">$2.99 <span>/ per month</span></p>
+                <button class="order-btn">Order</button>
+            </div>
+            <div class="plan-card recommended">
+                <h3>RECOMMENDED</h3>
+                <div class="ram">2 GB</div>
+                <p class="price">$5.98 <span>/ per month</span></p>
+                <button class="order-btn">Order</button>
+            </div>
+            <div class="plan-card">
+                <h3>BETTER</h3>
+                <div class="ram">3 GB</div>
+                <p class="price">$8.97 <span>/ per month</span></p>
+                <button class="order-btn">Order</button>
+            </div>
+            <div class="plan-card">
+                <h3>BEST</h3>
+                <div class="ram">4 GB</div>
+                <p class="price">$11.96 <span>/ per month</span></p>
+                <button class="order-btn">Order</button>
+            </div>
+        </div>
+    </section>
 
-  <!-- Plans -->
-  <section id="plans" class="plans">
-    <div class="container">
-      <h2 data-aos="fade-right">Our Plans</h2>
-      <div class="grid">
-        <div class="plan" data-aos="zoom-in" data-aos-delay="100">
-          <h3>1 Month</h3>
-          <p class="price">$8</p>
-          <ul>
-            <li><i class="fas fa-check-circle"></i> HD Channels</li>
-            <li><i class="fas fa-check-circle"></i> 24/7 Support</li>
-          </ul>
-        </div>
-        <div class="plan" data-aos="zoom-in" data-aos-delay="200">
-          <h3>3 Months</h3>
-          <p class="price">$18</p>
-          <ul>
-            <li><i class="fas fa-check-circle"></i> Multi-Device</li>
-            <li><i class="fas fa-check-circle"></i> EPG & Catch Up</li>
-          </ul>
-        </div>
-        <div class="plan" data-aos="zoom-in" data-aos-delay="300">
-          <h3>6 Months</h3>
-          <p class="price">$38</p>
-          <ul>
-            <li><i class="fas fa-check-circle"></i> Premium Channels</li>
-            <li><i class="fas fa-check-circle"></i> Save More</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Features -->
-  <section class="features" data-aos="fade-up">
-    <div class="container">
-      <h2>Core Features</h2>
-      <div class="features-grid">
-        <div class="feature" data-aos="fade-up" data-aos-delay="100">
-          <i class="fas fa-tv"></i> Live TV & Series
-        </div>
-        <div class="feature" data-aos="fade-up" data-aos-delay="200">
-          <i class="fas fa-paint-brush"></i> Modern UI
-        </div>
-        <div class="feature" data-aos="fade-up" data-aos-delay="300">
-          <i class="fas fa-record-vinyl"></i> Recording & Catch Up
-        </div>
-        <div class="feature" data-aos="fade-up" data-aos-delay="400">
-          <i class="fas fa-star"></i> Favorites
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 ClearView TV</p>
-  </footer>
-
-  <!-- AOS & Scripts -->
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script>AOS.init();</script>
+    <footer>
+        <p>&copy; 2025 Clearview IPTV. All rights reserved.</p>
+    </footer>
 </body>
 </html>
