--- a/index.html
+++ b/index.html
@@ -16,29 +16,49 @@
     <section class="plans">
         <h2>Our Plans</h2>
         <div class="plan-cards">
-            <div class="plan-card">
-                <h3>GOOD</h3>
-                <div class="ram">1 GB</div>
-                <p class="price">$2.99 <span>/ per month</span></p>
-                <button class="order-btn">Order</button>
+            <div class="plan-card basic">
+                <h3>BASIC</h3>
+                <p class="price">$12.00 <span>monthly</span></p>
+                <ul>
+                    <li>16k+ Live Channels</li>
+                    <li>60k+ Movies & Series</li>
+                    <li>Sports + PPV</li>
+                    <li>No Online Support</li>
+                </ul>
+                <button class="order-btn">Buy Now</button>
             </div>
-            <div class="plan-card recommended">
-                <h3>RECOMMENDED</h3>
-                <div class="ram">2 GB</div>
-                <p class="price">$5.98 <span>/ per month</span></p>
-                <button class="order-btn">Order</button>
+            <div class="plan-card personal">
+                <h3>PERSONAL</h3>
+                <p class="price">$30.00 <span>Three months</span></p>
+                <ul>
+                    <li>16k+ Live Channels</li>
+                    <li>60k+ Movies & Series</li>
+                    <li>Sports + PPV</li>
+                    <li>No Online Support</li>
+                </ul>
+                <button class="order-btn">Buy Now</button>
             </div>
-            <div class="plan-card">
-                <h3>BETTER</h3>
-                <div class="ram">3 GB</div>
-                <p class="price">$8.97 <span>/ per month</span></p>
-                <button class="order-btn">Order</button>
+            <div class="plan-card standard">
+                <h3>STANDARD</h3>
+                <p class="price">$50.00 <span>Six months</span></p>
+                <ul>
+                    <li>16k+ Live Channels</li>
+                    <li>60k+ Movies & Series</li>
+                    <li>Sports + PPV</li>
+                    <li>Online Support</li>
+                </ul>
+                <button class="order-btn">Buy Now</button>
             </div>
-            <div class="plan-card">
-                <h3>BEST</h3>
-                <div class="ram">4 GB</div>
-                <p class="price">$11.96 <span>/ per month</span></p>
-                <button class="order-btn">Order</button>
+            <div class="plan-card ultimate">
+                <h3>ULTIMATE PRO</h3>
+                <p class="price">$80.00 <span>Yearly</span></p>
+                <ul>
+                    <li>16k+ Live Channels</li>
+                    <li>60k+ Movies & Series</li>
+                    <li>Sports + PPV</li>
+                    <li>Online Support</li>
+                </ul>
+                <button class="order-btn">Buy Now</button>
             </div>
         </div>
     </section>
