--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clearview IPTV Plans</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
     </header>
 
     <section class="plans">
-        <h2>Our Plans</h2>
+        <h2>Our IPTV Plans</h2>
         <div class="plan-cards">
             <div class="plan-card basic">
                 <h3>BASIC</h3>
