--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="plan-card personal">
                 <h3>PERSONAL</h3>
-                <p class="price">$30.00 <span>Three months</span></p>
+                <p class="price">$30.00 <span>3 months</span></p>
                 <ul>
                     <li>16k+ Live Channels</li>
                     <li>60k+ Movies & Series</li>
