--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clearview IPTV Plans</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
     <header>
@@ -15,27 +16,27 @@
     </header>
 
     <section class="plans">
-        <h2>Our IPTV Plans</h2>
+        <h2>Choose Your Plan</h2>
         <div class="plan-cards">
             <div class="plan-card basic">
                 <h3>BASIC</h3>
                 <p class="price">$12.00 <span>monthly</span></p>
                 <ul>
-                    <li>16k+ Live Channels</li>
-                    <li>60k+ Movies & Series</li>
-                    <li>Sports + PPV</li>
-                    <li>No Online Support</li>
+                    <li><i class="fas fa-tv"></i> 16k+ Live Channels</li>
+                    <li><i class="fas fa-film"></i> 60k+ Movies & Series</li>
+                    <li><i class="fas fa-soccer-ball"></i> Sports + PPV</li>
+                    <li><i class="fas fa-question-circle"></i> No Online Support</li>
                 </ul>
                 <button class="order-btn">Buy Now</button>
             </div>
             <div class="plan-card personal">
                 <h3>PERSONAL</h3>
-                <p class="price">$30.00 <span>3 months</span></p>
+                <p class="price">$30.00 <span>Three months</span></p>
                 <ul>
-                    <li>16k+ Live Channels</li>
-                    <li>60k+ Movies & Series</li>
-                    <li>Sports + PPV</li>
-                    <li>No Online Support</li>
+                    <li><i class="fas fa-tv"></i> 16k+ Live Channels</li>
+                    <li><i class="fas fa-film"></i> 60k+ Movies & Series</li>
+                    <li><i class="fas fa-soccer-ball"></i> Sports + PPV</li>
+                    <li><i class="fas fa-question-circle"></i> No Online Support</li>
                 </ul>
                 <button class="order-btn">Buy Now</button>
             </div>
@@ -43,10 +44,10 @@
                 <h3>STANDARD</h3>
                 <p class="price">$50.00 <span>Six months</span></p>
                 <ul>
-                    <li>16k+ Live Channels</li>
-                    <li>60k+ Movies & Series</li>
-                    <li>Sports + PPV</li>
-                    <li>Online Support</li>
+                    <li><i class="fas fa-tv"></i> 16k+ Live Channels</li>
+                    <li><i class="fas fa-film"></i> 60k+ Movies & Series</li>
+                    <li><i class="fas fa-soccer-ball"></i> Sports + PPV</li>
+                    <li><i class="fas fa-headset"></i> Online Support</li>
                 </ul>
                 <button class="order-btn">Buy Now</button>
             </div>
@@ -54,10 +55,10 @@
                 <h3>ULTIMATE PRO</h3>
                 <p class="price">$80.00 <span>Yearly</span></p>
                 <ul>
-                    <li>16k+ Live Channels</li>
-                    <li>60k+ Movies & Series</li>
-                    <li>Sports + PPV</li>
-                    <li>Online Support</li>
+                    <li><i class="fas fa-tv"></i> 16k+ Live Channels</li>
+                    <li><i class="fas fa-film"></i> 60k+ Movies & Series</li>
+                    <li><i class="fas fa-soccer-ball"></i> Sports + PPV</li>
+                    <li><i class="fas fa-headset"></i> Online Support</li>
                 </ul>
                 <button class="order-btn">Buy Now</button>
             </div>
