--- a/index.html
+++ b/index.html
@@ -18,7 +18,50 @@
     <section class="plans">
         <h2>Choose Your Plan</h2>
         <div class="plan-cards">
-            <!-- Existing plan cards -->
+            <div class="plan-card basic">
+                <h3>BASIC</h3>
+                <p class="price">$12.00 <span>monthly</span></p>
+                <ul>
+                    <li><i class="fas fa-tv"></i> 16k+ Live Channels</li>
+                    <li><i class="fas fa-film"></i> 60k+ Movies & Series</li>
+                    <li><i class="fas fa-soccer-ball"></i> Sports + PPV</li>
+                    <li><i class="fas fa-question-circle"></i> No Online Support</li>
+                </ul>
+                <button class="order-btn">Buy Now</button>
+            </div>
+            <div class="plan-card personal">
+                <h3>PERSONAL</h3>
+                <p class="price">$30.00 <span>Three months</span></p>
+                <ul>
+                    <li><i class="fas fa-tv"></i> 16k+ Live Channels</li>
+                    <li><i class="fas fa-film"></i> 60k+ Movies & Series</li>
+                    <li><i class="fas fa-soccer-ball"></i> Sports + PPV</li>
+                    <li><i class="fas fa-question-circle"></i> No Online Support</li>
+                </ul>
+                <button class="order-btn">Buy Now</button>
+            </div>
+            <div class="plan-card standard">
+                <h3>STANDARD</h3>
+                <p class="price">$50.00 <span>Six months</span></p>
+                <ul>
+                    <li><i class="fas fa-tv"></i> 16k+ Live Channels</li>
+                    <li><i class="fas fa-film"></i> 60k+ Movies & Series</li>
+                    <li><i class="fas fa-soccer-ball"></i> Sports + PPV</li>
+                    <li><i class="fas fa-headset"></i> Online Support</li>
+                </ul>
+                <button class="order-btn">Buy Now</button>
+            </div>
+            <div class="plan-card ultimate">
+                <h3>ULTIMATE PRO</h3>
+                <p class="price">$80.00 <span>Yearly</span></p>
+                <ul>
+                    <li><i class="fas fa-tv"></i> 16k+ Live Channels</li>
+                    <li><i class="fas fa-film"></i> 60k+ Movies & Series</li>
+                    <li><i class="fas fa-soccer-ball"></i> Sports + PPV</li>
+                    <li><i class="fas fa-headset"></i> Online Support</li>
+                </ul>
+                <button class="order-btn">Buy Now</button>
+            </div>
         </div>
     </section>
 
