--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
         <h2>NOW AVAILABLE ON</h2>
         <div class="available-icons">
             <div class="icon">
-                <img src="samsung-logo.png" alt="Samsung Logo">
+                <img src="images/samsung-logo.png" alt="Samsung Logo">
                 <p>Samsung TV</p>
             </div>
             <div class="icon">
-                <img src="lg-logo.png" alt="LG Logo">
+                <img src="images/lg-logo.png" alt="LG Logo">
                 <p>LG TV</p>
             </div>
             <div class="icon">
-                <img src="android-logo.png" alt="Android Logo">
+                <img src="images/android-logo.png" alt="Android Logo">
                 <p>Android App</p>
             </div>
             <div class="icon">
-                <img src="ios-logo.png" alt="iOS Logo">
+                <img src="images/ios-logo.png" alt="iOS Logo">
                 <p>iOS App</p>
             </div>
         </div>
