--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
         </div>
     </section>
 
+    <!-- Floating Buttons -->
+    <div class="floating-buttons">
+        <a href="https://wa.me/254757780414" target="_blank" class="whatsapp-button">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="mailto:njoga96kennedy@gmail.com" class="email-button">
+            <i class="fas fa-envelope"></i>
+        </a>
+    </div>
+
     <footer>
         <p>&copy; 2025 Clearview IPTV. All rights reserved.</p>
     </footer>
