--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Clearview IPTV Plans</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
     <header>
@@ -91,10 +90,10 @@
     <!-- Floating Buttons -->
     <div class="floating-buttons">
         <a href="https://wa.me/254757780414" target="_blank" class="whatsapp-button">
-            <i class="fab fa-whatsapp"></i>
+            <img src="images/whatsapp-logo.png" alt="WhatsApp Logo">
         </a>
         <a href="mailto:njoga96kennedy@gmail.com" class="email-button">
-            <i class="fas fa-envelope"></i>
+            <img src="images/email-logo.png" alt="Email Logo">
         </a>
     </div>
 
