--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
   <main>
     <section class="products">
       <div class="product">
-        <img src="sport-tv.jpg" alt="Sport TV">
+        <img src="https://via.placeholder.com/300x200?text=Sport+TV" alt="Sport TV">
+
         <h2>Sport Tv</h2>
         <p class="price">$5.02</p>
         <button onclick="addToCart('Sport Tv', 5.02)">Add to Cart</button>
       </div>
-
       <div class="product">
-        <img src="dstv-stream.jpg" alt="DSTV Stream">
+        <img src="https://via.placeholder.com/300x200?text=DSTV+Stream" alt="DSTV Stream">
         <h2>DSTV Stream</h2>
         <p class="price">$4.19</p>
         <button onclick="addToCart('DSTV Stream', 4.19)">Add to Cart</button>
       </div>
 
       <div class="product">
-        <img src="netflix.jpg" alt="Netflix">
+        <img src="https://via.placeholder.com/300x200?text=Netflix" alt="Netflix">
         <h2>Netflix</h2>
         <p class="price">$9.21</p>
         <button onclick="addToCart('Netflix', 9.21)">Add to Cart</button>
