--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
   <main>
     <section class="products">
       <div class="product">
-        <img src="https://picsum.photos/300/200?random=11" alt="Sport TV">
+        <img src="https://images.unsplash.com/photo-1600788907410-2f6b29f90b9a?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=600" alt="Sport TV">
         <h2>Sport TV</h2>
         <p class="price">$5.02</p>
         <button onclick="addToCart('Sport TV', 5.02)">Add to Cart</button>
       </div>
 
       <div class="product">
-        <img src="https://picsum.photos/300/200?random=12" alt="DSTV Stream">
+        <img src="https://images.unsplash.com/photo-1586971858830-9dfc1746f2b7?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=600" alt="DSTV Stream">
         <h2>DSTV Stream</h2>
         <p class="price">$4.19</p>
         <button onclick="addToCart('DSTV Stream', 4.19)">Add to Cart</button>
       </div>
 
       <div class="product">
-        <img src="https://picsum.photos/300/200?random=13" alt="Netflix">
+        <img src="https://images.unsplash.com/photo-1587825140708-dfaf72ae4b04?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=600" alt="Netflix">
         <h2>Netflix</h2>
         <p class="price">$9.21</p>
         <button onclick="addToCart('Netflix', 9.21)">Add to Cart</button>
