--- a/checkout.html
+++ b/checkout.html
@@ -22,7 +22,9 @@
       <h2>Your Cart</h2>
       <ul id="cart-items"></ul>
       <p id="total-price">Total: $0.00</p>
-      <button onclick="checkout()">Complete Purchase</button>
+      <button onclick="checkout()">Complete Purchase (Local)</button>
+
+      <div id="paypal-button-container" style="margin-top: 20px;"></div>
     </section>
   </main>
 
@@ -31,5 +33,28 @@
   </footer>
 
   <script src="cart.js"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD"></script>
+  <script>
+    paypal.Buttons({
+      createOrder: function(data, actions) {
+        let totalText = document.getElementById('total-price').textContent;
+        let totalAmount = parseFloat(totalText.replace(/[^0-9.]/g, ''));
+        return actions.order.create({
+          purchase_units: [{
+            amount: {
+              value: totalAmount.toFixed(2)
+            }
+          }]
+        });
+      },
+      onApprove: function(data, actions) {
+        return actions.order.capture().then(function(details) {
+          alert('Transaction completed by ' + details.payer.name.given_name);
+          localStorage.removeItem('cart');
+          window.location.href = 'index.html';
+        });
+      }
+    }).render('#paypal-button-container');
+  </script>
 </body>
 </html>
