--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
   <main>
     <section class="contact">
       <h2>Get in Touch</h2>
-      <p>Email: support@streamingstore.com</p>
-      <p>Phone: +254 700 000 000</p>
+      <p>Email: njoga96kennedy@gmail.com</p>
+      <p>Phone/Whatsapp: +254 795771447</p>
     </section>
   </main>
 
