--- a/index.html
+++ b/index.html
@@ -1,58 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KenFlix Underground</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>KenFlix Underground</title>
+  <link rel="stylesheet" href="style.css" />
+  <script defer src="script.js"></script>
 </head>
 <body>
-    <header class="hero">
-        <h1>Break the Limits of Streaming</h1>
-        <p>Underground digital tools for the limitless user.</p>
-        <a href="#products" class="cta-button">Explore Now</a>
-    </header>
+  <header class="hero">
+    <h1>Break the Limits of Streaming</h1>
+    <p>Underground digital tools for the limitless user.</p>
+    <a href="#products" class="cta-button">Explore Now</a>
+  </header>
 
-    <section id="products" class="products">
-        <div class="product-card">
-            <h2>🎥 YouTube & YT Music Premium</h2>
-            <p>Get ad-free music and videos on the go. Global access, auto-renew.</p>
-        </div>
-        <div class="product-card">
-            <h2>🎬 Free Movie & Series Streaming App</h2>
-            <p>Unlimited movies and series. HD, Dark mode, Genre search.</p>
-        </div>
-        <div class="product-card">
-            <h2>🏟️ Live Sports Streaming App</h2>
-            <p>Live matches from EPL, NBA, La Liga. Score updates + HD streams.</p>
-        </div>
-        <div class="product-card">
-            <h2>🎧 Spotify Premium</h2>
-            <p>Listen offline. No ads. Unlimited skips.</p>
-        </div>
-        <div class="product-card">
-            <h2>🛡️ Secure VPN Proxy</h2>
-            <p>Hide your tracks. No logs. Fast & global servers.</p>
-        </div>
-        <div class="product-card">
-            <h2>💃 TikTok Dirty Version</h2>
-            <p>Unfiltered content. Unlock spicy TikTok zones.</p>
-        </div>
-    </section>
+  <section id="products" class="products">
+    <div class="product-card">
+      <img src="assets/youtube.png" alt="YouTube Icon" class="icon" />
+      <h2>🎥 YouTube & YT Music Premium</h2>
+      <p>Get ad-free music and videos on the go. Global access, auto-renew.</p>
+    </div>
+    <div class="product-card">
+      <img src="assets/movies.png" alt="Movies Icon" class="icon" />
+      <h2>🎬 Free Movie & Series Streaming App</h2>
+      <p>Unlimited movies and series. HD, Dark mode, Genre search.</p>
+    </div>
+    <div class="product-card">
+      <img src="assets/sports.png" alt="Sports Icon" class="icon" />
+      <h2>🏟️ Live Sports Streaming App</h2>
+      <p>Live matches from EPL, NBA, La Liga. Score updates + HD streams.</p>
+    </div>
+    <div class="product-card">
+      <img src="assets/spotify.png" alt="Spotify Icon" class="icon" />
+      <h2>🎧 Spotify Premium</h2>
+      <p>Listen offline. No ads. Unlimited skips.</p>
+    </div>
+    <div class="product-card">
+      <img src="assets/vpn.png" alt="VPN Icon" class="icon" />
+      <h2>🛡️ Secure VPN Proxy</h2>
+      <p>Hide your tracks. No logs. Fast & global servers.</p>
+    </div>
+    <div class="product-card">
+      <img src="assets/tiktok.png" alt="TikTok Icon" class="icon" />
+      <h2>💃 TikTok Dirty Version</h2>
+      <p>Unfiltered content. Unlock spicy TikTok zones.</p>
+    </div>
+  </section>
 
-    <section class="how-it-works">
-        <h2>How It Works</h2>
-        <ol>
-            <li>Join our Telegram</li>
-            <li>Get your file or link</li>
-            <li>Install and enjoy premium access</li>
-        </ol>
-    </section>
+  <section class="how-it-works">
+    <h2>How It Works</h2>
+    <ol>
+      <li>Join our Telegram</li>
+      <li>Get your file or link</li>
+      <li>Install and enjoy premium access</li>
+    </ol>
+  </section>
 
-    <footer>
-        <p>Contact us: <a href="https://t.me/yourtelegram">@yourtelegram</a></p>
-        <p>© 2025 KenFlix Digital. No Limits, Just Vibes.</p>
-    </footer>
+  <footer>
+    <p>Contact us: <a href="https://t.me/yourtelegram">@yourtelegram</a></p>
+    <p>© 2025 KenFlix Digital. No Limits, Just Vibes.</p>
+  </footer>
 </body>
 </html>
